; ModuleID = '/home/carl/AnghaBench/openwrt/package/kernel/avila-wdt/src/extr_avila-wdt.c_wdt_enable.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/kernel/avila-wdt/src/extr_avila-wdt.c_wdt_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wdt_counter = common dso_local global i32 0, align 4
@heartbeat = common dso_local global i32 0, align 4
@IXP4XX_GPIO_GPCLKR = common dso_local global i32* null, align 8
@IXP4XX_GPIO_OUT = common dso_local global i32 0, align 4
@IXP4XX_GPIO_LOW = common dso_local global i32 0, align 4
@WDT_RUNNING = common dso_local global i32 0, align 4
@wdt_status = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @wdt_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wdt_enable() #0 {
  %1 = load i32, i32* @heartbeat, align 4
  %2 = mul nsw i32 %1, 2
  %3 = call i32 @atomic_set(i32* @wdt_counter, i32 %2)
  %4 = load i32*, i32** @IXP4XX_GPIO_GPCLKR, align 8
  %5 = load i32, i32* %4, align 4
  %6 = and i32 %5, -257
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* @IXP4XX_GPIO_OUT, align 4
  %8 = call i32 @gpio_line_config(i32 14, i32 %7)
  %9 = load i32, i32* @IXP4XX_GPIO_LOW, align 4
  %10 = call i32 @gpio_line_set(i32 14, i32 %9)
  %11 = load i32, i32* @WDT_RUNNING, align 4
  %12 = call i32 @test_bit(i32 %11, i32* @wdt_status)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %0
  %15 = call i32 @wdt_refresh(i32 0)
  br label %16

16:                                               ; preds = %14, %0
  %17 = load i32, i32* @WDT_RUNNING, align 4
  %18 = call i32 @set_bit(i32 %17, i32* @wdt_status)
  ret void
}

declare dso_local i32 @atomic_set(i32*, i32) #1

declare dso_local i32 @gpio_line_config(i32, i32) #1

declare dso_local i32 @gpio_line_set(i32, i32) #1

declare dso_local i32 @test_bit(i32, i32*) #1

declare dso_local i32 @wdt_refresh(i32) #1

declare dso_local i32 @set_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
